--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.android.popularmoviesstage1.MainActivity">
+        <activity android:name="com.example.android.popularmoviesstage1.MovieActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
